# hint-collection

./: .gitignore  README.md  docker-compose.local.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/answers/: admin.py  models.py  serializers.py  urls.py  views.py
backend/answers/migrations/: 0001_initial.py  0002_alter_answer_likes.py
backend/backend/: settings.py  urls.py
backend/basemodel/: models.py  serializers.py
backend/questions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/questions/migrations/: 0001_initial.py  0002_alter_question_marks.py
backend/subtopics/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/subtopics/migrations/: 0001_initial.py  0002_subtopic_slug_alter_subtopic_content.py  0003_alter_subtopic_slug.py  0004_alter_subtopic_slug_alter_subtopic_unique_together.py
backend/topics/: admin.py  models.py  serializers.py  urls.py  views.py
backend/topics/migrations/: 0001_initial.py  0002_alter_topic_content.py  0003_topic_slug.py
backend/users/: backends.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  setupProxy.js
frontend/src/components/: Answer.jsx  AnswerItem.jsx  EditForm.jsx  Footer.jsx  Header.jsx  Question.jsx  QuestionItem.jsx  Section.jsx  SectionList.jsx  SubtopicItem.jsx  Topic.jsx  TopicItem.jsx
frontend/src/context/: AuthContext.js
frontend/src/pages/: Home.jsx  Login.jsx  (+4 more)
(+11 files in other folders)
