[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ilapshin <igorlapshin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
Django = "^4.2.6"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
